# VTK-fluent-addon

./: .gitignore  AGENT.md  CLAUDE.md  HISTORY.md  LICENSE  README.md  h5文件格式.md  requirements.txt  总观.md
.claude/: settings.json  settings.local.json
.cursor/rules/: history-window-sync.mdc
FluentCFFGNN/: FluentCFFGNNExporter.cxx  FluentCFFGNNExporter.h
cmake/FluentCFFGNNPy/: CMakeLists.txt  CMakePresets.json  install-vcpkg-deps-E.ps1  vtkAOSDataArrayTemplateInstantiate.cxx
doc/: FluentCFFGNNPy-build-troubleshooting.md  README.md  fluentcff_gnn_module.md  pipelines-backlog.md
docs/: FluentCFFGNNPy-build-troubleshooting.md  README.md  cff-v21-cas-dat-hdf5-field-tree.md  fluent-cff-dat-cas-structure.md  fluent-cff-modified-modules.md  fluentcff_gnn_module.md  pipelines-backlog.md
examples/FluentCFFZoneViewer/: CMakeLists.txt  main.cxx  reader_probe.cxx  vtkAOSDataArrayTemplateInstantiate.cxx
examples/FluentCFFZoneViewer/perf-opt/: README.md  baseline-notes.md  build-debug.ps1  collect-log.ps1  run-v21.ps1
python/: fluentcff_boundary_encoder.py  fluentcff_field_utils.py  fluentcff_gnn_dataset.py  fluentcff_gnn_env.py  fluentcff_gnn_features.py  fluentcff_gnn_pybind.cpp  fluentcff_internal_gnn.py  requirements-train.txt  smoke_test_fluentcff_gnn.py  test_fluentcff_cache_roundtrip.py  train_baseline_graphsaint.py
python/vtk-addon/: MANIFEST.in  README.md  install_verify_vtk_addon.py  pyproject.toml  setup.py
python/vtk-addon/cpp/: CMakeLists.txt  fluentcff_pybind.cpp
python/vtk-addon/vtk_addon_docs/: __init__.py  vtkIOFLUENTCFF_api_reference.md  vtkIOFLUENTCFF_bindings.pyi
scripts/: cff_dat_face_field_zones.py
test/: smoke_test_fluentcff_gnn.py  test_fluentcff_cache_roundtrip.py  train_baseline_graphsaint.py
vtk/IO/FLUENTCFF/: README.md  vtkFLUENTCFFReader.cxx  vtkFLUENTCFFReader.h  vtkIOFLUENTCFFModule.h
